# archClean

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
pkgbuild/: PKGBUILD
src/archclean/: analyzer.py  cli.py  tracker.py  tui_analyzer.py  utils.py
src/archclean/cleaners/: home.py  languages.py  system.py
tests/: test_analyzer.py  test_home.py  test_languages.py  test_system.py  test_tui_analyzer.py  test_utils.py
