[project]
name = "archclean"
version = "0.1.12"
description = "A CLI tool for safely cleaning Arch Linux systems."
authors = [
    {name = "Raj singh chauhan",email = "rajsinghchauhan352@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "click (>=8.1.7,<9.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "sh (>=2.0.6,<3.0.0)",
    "textual (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "archclean", from = "src"}]

[tool.poetry.scripts]
archclean = "archclean.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
